# atol-canopy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BROKER_PREREQUISITES_ENHANCEMENT.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  schema.sql
.github/: pull_request_template.md
.github/workflows/: build-and-deploy-dev.yml  build-publish.yml  commitlint.yml  lint.yml  release-please.yml
alembic/: env.py
alembic/archive/: 0002_timestamptz_broker_idx.py  0003_add_tol_id_to_assembly.py  0004_add_assembly_run.py  0005_org_sci_name_nullable.py  0006_consolidated_submission_schema_refactor.py  0007_add_qc_read_tables.py  0010_add_taxonomy_info.py  0012_assembly_manifest_columns.py  0013_remove_assembly_submission_xml.py  0014_add_ncbi_taxonomy_details.py
alembic/base_schema/: 0001_initial_schema.sql
app/: main.py
app/config/: ena-atol-map.json
docs/: MIGRATION_WORKFLOW.md  assembly_reporting_api.md  bulk_import_api.md  migration_workflow.md  ncbi_taxonomy_sync.md  xml_export_api.md
migrations/: README.md  add_submission_fk_columns.sql
scripts/: create_user.py  entrypoint.sh  expire_leases.py
tests/: conftest.py  test_endpoints.py  test_endpoints_assemblies.py  test_endpoints_auth.py  test_endpoints_broker.py  test_endpoints_experiment_submissions.py  test_endpoints_organisms.py  test_endpoints_projects_more.py  test_endpoints_users_more.py  test_endpoints_xml_export.py  test_endpoints_xml_export_more.py  test_mapping.py  test_root.py  test_security.py  test_settings.py  test_xml_generator.py
(+138 files in other folders)
